# gnome-nibbles

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  ChangeLog.old  Makefile.am  NEWS  autogen.sh  board.c  board.h  boni.c  boni.h  bonus.c  bonus.h  configure.ac  ggz-network.c  ggz-network.h  git.mk  gnibbles-client.dsc.in  gnibbles-server.dsc.in  gnibbles.6  gnibbles.c  gnibbles.desktop  gnibbles.desktop.in  gnibbles.desktop.in.in  gnibbles.h  gnibbles.room  gnibbles.room.in  gnibbles.schemas.in  gnibbles.soundlist  gnibbles.soundlist.in  gnome-nibbles-3.20.1.tar.xz  gnome-nibbles.doap  level.c  level.h  level001.gnl  level002.gnl  level003.gnl  level004.gnl  (+47 more)
data/: Makefile.am  controls-grid.ui  controls.ui  first-run.ui  gnibbles.6  gnibbles.desktop.in.in  gnibbles.schemas.in  gnome-nibbles.6  gnome-nibbles.appdata.xml  gnome-nibbles.appdata.xml.in  gnome-nibbles.desktop.in  gnome-nibbles.desktop.in.in  gnome-nibbles.gresource.xml  gnome-nibbles.ui  meson.build  nibbles-menus.ui  nibbles.css  nibbles.ui  org.gnome.Nibbles.appdata.xml.in  org.gnome.Nibbles.desktop.in  org.gnome.Nibbles.gschema.xml  org.gnome.Nibbles.metainfo.xml.in  org.gnome.Nibbles.service.in  org.gnome.gnibbles.gschema.xml.in  org.gnome.nibbles.gschema.xml  org.gnome.nibbles.gschema.xml.in  player-score-box.ui  players.ui  preferences-dialog.ui  scoreboard.ui  speed.ui
data/icons/: Makefile.am
data/icons/HighContrast/: Makefile.am
data/icons/hicolor/: Makefile.am
data/levels/: Makefile.am  level001.gnl  level002.gnl  level003.gnl  level004.gnl  level005.gnl  level006.gnl  level007.gnl  level008.gnl  level009.gnl  level010.gnl  level011.gnl  level012.gnl  level013.gnl  level014.gnl  level015.gnl  level016.gnl  level017.gnl  level018.gnl  level019.gnl  level020.gnl  level021.gnl  level022.gnl  level023.gnl  level024.gnl  level025.gnl  level026.gnl  meson.build
data/pix/: Makefile.am  meson.build
data/ui/: are-you-sure.ui  arrow.ui  board-progress.ui  colourwheel.ui  colourwheelsegment.ui  controls-grid.ui  controls.ui  first-run-adw.ui  first-run.ui  help-overlay.ui  nibbles-adw.ui  nibbles.ui  player-score-box.ui  players.ui  preferences-dialog.ui  scoreboard.ui  speed.ui
docs/C/: gnibbles-manual.sgml
help/: .gitignore  ChangeLog  ChangeLog.old  LINGUAS  Makefile.am  gnibbles.omf.in  meson.build
help/C/: .cvsignore  Makefile.am  basics.page  change-controls.page  controls-change.page  controls-default.page  controls.page  fake-bonus.page  gnibbles-C.omf  gnibbles.sgml  gnibbles.xml  index.docbook  index.page  multi-player.page  network-games.xml  preferences.page  rel-movement.page  scores.page  sound-change.page  speed-change.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: .xml2po.mo  de.po  gnibbles.xml  network-games.xml
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/hu/: hu.po
help/it/: it.po
help/kk/: kk.po
help/ko/: ko.po
help/oc/: oc.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sl/: sl.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
m4/: intltool.m4  libtool.m4
pix/: Makefile.am
po/: POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  (+52 more)
sounds/: Makefile.am
src/: Makefile.am  board-progress.vala  board.c  board.h  boni.c  boni.h  boni.vala  bonus.c  bonus.h  colourwheel.vala  config.vapi  controls.vala  divide_by.c  divide_by.h  games-controls.c  games-frame.c  games-frame.h  games-fullscreen-action.c  games-gridframe.c  games-gridframe.h  games-gridframe.vapi  games-pause-action.c  games-pause-action.h  games-scores-backend.c  games-scores-dialog.c  games-scores-dialog.h  games-scores.c  games-scores.h  games-stock.c  games-stock.h  gnibbles.c  gnibbles.h  gnome-nibbles.gresource.xml.in  gnome-nibbles.vala  main.c  main.h  meson.build  nibbles-game.vala  nibbles-test.vala  nibbles-view.vala  (+25 more)
src/vapi/: config.vapi
subprojects/: .gitignore  libgnome-games-support.wrap
subprojects/libgnome-games-support/games/: meson.build
subprojects/libgnome-games-support/games/scores/: context.vala  dialog.vala
subprojects/libgnome-games-support/tests/: test-scores.vala
